k8s/zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-zk
  labels:
    app: kafka
    component: kafka-zk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-zk
  template:
    metadata:
      labels:
        app: kafka-zk
        component: kafka-zk
    spec:
      containers:
      - name: kafka-zk
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-zk
  labels:
    app: kafka
    component: kafka-zk
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: kafka-zk
    component: kafka-zk
